# Canario-shop

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE.md  README.md  pyproject.toml  run_docker.py
.github/workflows/: pipeline.yml
PycharmProjects/newshopeasy/: Dockerfile  apicall.py  main.py
PycharmProjects/newshopeasy/static/: styles.css
app/: Caddyfile  cleanup_directories.sh  main.py  test_canario.py
static/: styles.css
