[tool.poetry]
name = "canario-shopeasy"
version = "0.1.0"
description = ""
authors = ["HJacksons <jacksonherberts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
pytest = "^7.4.3"
httpx = "^0.25.0"
pymemcache = "^4.0.0"


[tool.poetry.group.dev.dependencies]
pymemcache = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
